--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/List/ExpertData.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/List/ExpertData.cshtml
@@ -49,7 +49,7 @@
                                     <a href="/Plan/PlayRecord/@item.LType?uid=@item.UserId&type=1">
                                         @if (string.IsNullOrEmpty(item.Avater))
                                         {
-                                            <img src="/images/default_avater.png" />
+                                            <img src="@ViewBag.osshost/images/default_avater.png" />
                                         }
                                         else
                                         {
@@ -113,7 +113,7 @@
                                     <a href="/Plan/PlayRecord/@item.LType?uid=@item.UserId&type=1">
                                         @if (string.IsNullOrEmpty(item.Avater))
                                         {
-                                            <img src="/images/default_avater.png" />
+                                            <img src="@ViewBag.osshost/images/default_avater.png" />
                                         }
                                         else
                                         {
@@ -174,7 +174,7 @@
                                     <a href="/Plan/PlayRecord/@item.LType?uid=@item.UserId&type=1">
                                         @if (string.IsNullOrEmpty(item.Avater))
                                         {
-                                            <img src="/images/default_avater.png" />
+                                            <img src="@ViewBag.osshost/images/default_avater.png" />
                                         }
                                         else
                                         {
@@ -236,7 +236,7 @@
                                     <a href="/Plan/PlayRecord/@item.LType?uid=@item.UserId&type=1">
                                         @if (string.IsNullOrEmpty(item.Avater))
                                         {
-                                            <img src="/images/default_avater.png" />
+                                            <img src="@ViewBag.osshost/images/default_avater.png" />
                                         }
                                         else
                                         {
@@ -274,7 +274,7 @@
             <a href="/Plan/PlayRecord/@userDailyInfo.LType?uid=@userDailyInfo.UserId&type=1">
                 @if (string.IsNullOrEmpty(@userDailyInfo.Avater))
                 {
-                    <img src="/images/default_avater.png" />
+                    <img src="@ViewBag.osshost/images/default_avater.png" />
                 }
                 else
                 {
@@ -306,7 +306,7 @@
             <a href="/Plan/PlayRecord/@userWeekInfo.LType?uid=@userWeekInfo.UserId&type=1">
                 @if (string.IsNullOrEmpty(@userWeekInfo.Avater))
                 {
-                    <img src="/images/default_avater.png" />
+                    <img src="@ViewBag.osshost/images/default_avater.png" />
                 }
                 else
                 {
@@ -337,7 +337,7 @@
             <a href="/Plan/PlayRecord/@userMonthInfo.LType?uid=@userMonthInfo.UserId&type=1">
                 @if (string.IsNullOrEmpty(@userMonthInfo.Avater))
                 {
-                    <img src="/images/default_avater.png" />
+                    <img src="@ViewBag.osshost/images/default_avater.png" />
                 }
                 else
                 {
@@ -368,7 +368,7 @@
             <a href="/Plan/PlayRecord/@userTotalInfo.LType?uid=@userTotalInfo.UserId&type=1">
                 @if (string.IsNullOrEmpty(@userTotalInfo.Avater))
                 {
-                    <img src="/images/default_avater.png" />
+                    <img src="@ViewBag.osshost/images/default_avater.png" />
                 }
                 else
                 {
