--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/NewsDetail.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/NewsDetail.cshtml
@@ -58,19 +58,19 @@
                 <dt>分享文章</dt>
                 <dd>
                     <a href="javascript:call('wechatFriend');">
-                        <p><img src="/images/63_1.png" alt="分享到微信好友" /></p>
+                        <p><img src="@ViewBag.osshost/images/63_1.png" alt="分享到微信好友" /></p>
                         <p>微信好友</p>
                     </a>
                 </dd>
                 <dd>
                     <a href="javascript:call('wechatTimeline');">
-                        <p><img src="/images/63_2.png" alt="分享到朋友圈" /></p>
+                        <p><img src="@ViewBag.osshost/images/63_2.png" alt="分享到朋友圈" /></p>
                         <p>朋友圈</p>
                     </a>
                 </dd>
                 <dd>
                     <a href="javascript:call('qqFriend');">
-                        <p><img src="/images/63_3.png" alt="分享到QQ好友" /></p>
+                        <p><img src="@ViewBag.osshost/images/63_3.png" alt="分享到QQ好友" /></p>
                         <p>QQ好友</p>
                     </a>
                 </dd>
@@ -282,19 +282,19 @@
             <ul class="Share_ifNav">
                 <li>
                     <a href="javascript:call('wechatFriend');">
-                        <div class="Share_iNtu"><img src="/images/63_1.png"></div>
+                        <div class="Share_iNtu"><img src="@ViewBag.osshost/images/63_1.png"></div>
                         <p>微信好友</p>
                     </a>
                 </li>
                 <li>
                     <a href="javascript:call('wechatTimeline');">
-                        <div class="Share_iNtu"><img src="/images/63_2.png"></div>
+                        <div class="Share_iNtu"><img src="@ViewBag.osshost/images/63_2.png"></div>
                         <p>朋友圈</p>
                     </a>
                 </li>
                 <li>
                     <a href="javascript:call('qqFriend');">
-                        <div class="Share_iNtu"><img src="/images/63_3.png"></div>
+                        <div class="Share_iNtu"><img src="@ViewBag.osshost/images/63_3.png"></div>
                         <p>QQ好友</p>
                     </a>
                 </li>
