--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/NewIndex.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/NewIndex.cshtml
@@ -34,8 +34,8 @@
             <ul class="hdNav_cai"></ul>
         </div>
     </div>
-   <!--侧边栏-->
-   @Html.Partial("Sidebar")
+    <!--侧边栏-->
+    @Html.Partial("Sidebar")
 
     <div class="Plan_content top50">
         <div class="Plan_CInfo">
@@ -81,12 +81,12 @@
     <div class="mask" style="display:none;"></div>
     <div class="mask2" style="display:none;"></div>
     @*<div class="spinner" style="display:none;">
-        <div class="rect1"></div>
-        <div class="rect2"></div>
-        <div class="rect3"></div>
-        <div class="rect4"></div>
-        <div class="rect5"></div>
-    </div>*@
+            <div class="rect1"></div>
+            <div class="rect2"></div>
+            <div class="rect3"></div>
+            <div class="rect4"></div>
+            <div class="rect5"></div>
+        </div>*@
 
     <script type="text/javascript" src="@ViewBag.osshost/js/jquery-1.8.3.min.js"></script>
     <script type="text/javascript" src="@ViewBag.osshost/js/luo/dropload.js"></script>
@@ -99,5 +99,6 @@
     {
         <script src="@ViewBag.osshost/js/news/dynamic.js?v=1.1"></script>
     }
+    @{Html.RenderAction("index", "PvUvIp");}
 </body>
 </html>
