--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/Explain.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/Explain.cshtml
@@ -33,7 +33,8 @@
         <img src="@ViewBag.osshost/img/w15_8.png" class="YDY_tu" />
     </div>
     <div class="DL_info2" style="margin:30px 10px;">
-        <input type="submit" class="DL_if2btn" value="返回首页">
+        <a href="/Home/Index" class="DL_if2btn">返回首页</a>
+        @*<input type="submit" class="DL_if2btn" value="返回首页">*@
     </div>
 
 </body>
