--- a/C8.Lottery.Portal/C8.Lottery.Portal/css/style.css
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/css/style.css
@@ -1741,6 +1741,8 @@ left: 0;
     cursor: pointer;
     font-size: 14px;
     color: #fff;
+    line-height:44px;
+    text-align:center;
 }
 
 .DL_if2a {
@@ -8855,7 +8857,7 @@ footer {
 @keyframes stretchdelay {0%, 40%, 100% {transform: scaleY(0.4);-webkit-transform: scaleY(0.4);}  20% {transform: scaleY(1.0);-webkit-transform: scaleY(1.0);}}
 
 /*返回顶部*/
-.Back_Top{position: fixed;right: 10%;bottom: 15%;width: 30px;height: 30px;border-radius: 50%;background: rgba(241,49,49,0.8);z-index: 999999}
+.Back_Top{position: fixed;right: 10%;bottom: 10%;width: 30px;height: 30px;border-radius: 50%;background: rgba(241,49,49,0.8);z-index: 999}
 .Back_Top a{display: block;width: 100%;height: 100%;background: url(../images/w16.png) no-repeat center;background-size: 16px}
 
 
