--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Plan/Index.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Plan/Index.cshtml
@@ -26,7 +26,7 @@
     <script type="text/javascript" src="@ViewBag.osshost/js/dialog.min.js"></script>
     <script type="text/javascript" src="@ViewBag.osshost/js/yjp.js"></script>
     <script type="text/javascript" src="@ViewBag.osshost/js/runTime2.js"></script>
-    <script type="text/javascript" src="@ViewBag.osshost/js/plan_scroll1.js"></script>
+    <script type="text/javascript" src="@ViewBag.osshost/js/plan_scroll1.js?v=1.0"></script>
     <script type="text/javascript" src="@ViewBag.osshost/js/baidu-statistics.js"></script>
     <script type="text/javascript" src="@ViewBag.osshost/js/ossjs/PlanIndex.js"></script>
     <style>
