--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Talking/ManagementList.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Talking/ManagementList.cshtml
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="@ViewBag.osshost/css/Chat/index.css" />
     <script type="text/javascript" src="@ViewBag.osshost/js/baidu-statistics.js"></script>
 </head>
-<body>
+<body style="height:auto">
     <!--页面内容-->
     <div class="layout">
         @*<header class="topBarBox">
