--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/Index.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/Index.cshtml
@@ -84,7 +84,7 @@
                 </a>
             </li>
             <li>
-                <a href="javascript:;">
+                <a href="/Home/Down">
                     <i><img src="@ViewBag.osshost/images/grids_icon_08.png"></i>
                     <p>App</p>
                 </a>
