加百度统计

--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/Register.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/Register.cshtml
@@ -20,7 +20,8 @@
         var vDataid=@Html.Raw(JsonConvert.SerializeObject(ViewData["id"]));
     </script>
     <script type="text/javascript" src="@ViewBag.osshost/js/ossjs/Register.js"></script>
-    <script type="text/javascript" src="/js/baidu-statistics.js"></script>
+    <script type="text/javascript" src="@ViewBag.osshost/js/baidu-statistics.js"></script>
+
 </head>
 
 <body style="background:#F4F4F5;">
