--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/down.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/down.cshtml
@@ -18,6 +18,7 @@
     <script src="@ViewBag.osshost/js/dialog.min.js"></script>
     <script type="text/javascript" src="@ViewBag.osshost/js/yjp.js"></script>
     <script type="text/javascript" src="@ViewBag.osshost/js/ossjs/down.js"></script>
+    <script type="text/javascript" src="@ViewBag.osshost/js/baidu-statistics.js"></script>
 
  
 </head>
