--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/MyIntegral.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Personal/MyIntegral.cshtml
@@ -17,6 +17,7 @@
     <script type="text/javascript" src="@ViewBag.osshost/js/jquery.js"></script>
     <script type="text/javascript" src="@ViewBag.osshost/js/yjp.js"></script>
     <script type="text/javascript" src="@ViewBag.osshost/js/ossjs/MyIntegral.js"></script>
+    <script type="text/javascript" src="@ViewBag.osshost/js/baidu-statistics.js"></script>
 
 </head>
 
