--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/Explain.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/Explain.cshtml
@@ -9,6 +9,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=yes">
     <title>苹果安装说明</title>
     <link rel="stylesheet" type="text/css" href="@ViewBag.osshost/css/style.css" />
+    <script type="text/javascript" src="@ViewBag.osshost/js/baidu-statistics.js"></script>
+
 </head>
 
 <body>
