--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Plan/Index.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Plan/Index.cshtml
@@ -28,7 +28,6 @@
     <script type="text/javascript" src="@ViewBag.osshost/js/runTime2.js"></script>
     <script type="text/javascript" src="@ViewBag.osshost/js/plan_scroll1.js?v=1.0"></script>
     <script type="text/javascript" src="@ViewBag.osshost/js/baidu-statistics.js"></script>
-    <script type="text/javascript" src="@ViewBag.osshost/js/ossjs/PlanIndex.js"></script>
     <style>
         .mscroll {
             top: 200px;
@@ -288,6 +287,7 @@
     <!--搜索-->
     <div class="Plan_search"><a href="/Plan/ExpertSearch/@lType"></a></div>
     <script type="text/javascript" src="@ViewBag.osshost/js/luo/plan.index.expert.js?201805230"></script>
+    <script type="text/javascript" src="@ViewBag.osshost/js/ossjs/PlanIndex.js?20180601"></script>
 </body>
 @{Html.RenderAction("index", "PvUvIp");}
 </html>
