--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Plan/Index.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Plan/Index.cshtml
@@ -41,7 +41,7 @@
     <header class="hjc_header">
         <a href="javascript:;" class="hjc_back"></a>
         <a href="javascript:;" class="hjc_logo">@title</a>
-        <div class="Plan_QiHao">
+        <div class="Plan_QiHao" style="display: none;">
             <p class="QiHao_tit">近10期</p>
             <div class="QiHao_text">
                 <i class="QiHao_Ticon"></i>
