--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/NewsGalleryCategoryList.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/NewsGalleryCategoryList.cshtml
@@ -61,7 +61,7 @@
 </div>
 <div class="gallery-search">
     @*<input id="searchinput" name="keyword" type="search" class="iconfont" placeholder="&#xe901;搜索" />*@
-    <input type="text" id="searchinput" placeholder="搜索" class="Ser_SouSuoIpt" />
+    <input type="text" id="searchinput" placeholder="搜索" class="Ser_SouSuoIpt" onchange="newsManager.searchList()" />
 </div>
 <div class="container">
     <div class="gallery box">
