修改六彩资讯跳转链接

--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/Open.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/Open.cshtml
@@ -58,7 +58,7 @@
 
     @Html.Partial("Footer")
 
-    <script type="text/javascript" src="@ViewBag.osshost/js/ossjs/HomeIndex.js"></script>
+    <script type="text/javascript" src="@ViewBag.osshost/js/ossjs/HomeIndex.js?20180606"></script>
 
 </body>
 @{Html.RenderAction("index", "PvUvIp");}
