--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Plan/Look.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Plan/Look.cshtml
@@ -208,7 +208,7 @@
                         {
                             count++;
 
-                            if (count == 6 && ((lType >= 9 && lType < 38) || (lType >= 60 && lType < 63)))
+                            if (plan.Sort==5 && ((lType >= 9 && lType < 38) || (lType >= 60 && lType < 63)))
                             {
                                 <tr>
                                     <td align="center"><font>@plan.ShowSort</font></td>
