--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/Index.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Home/Index.cshtml
@@ -217,7 +217,7 @@
         }
     </div>
     @Html.Partial("Footer")
-    <script type="text/javascript" src="@ViewBag.osshost/js/ossjs/HomeIndex.js"></script>
+    <script type="text/javascript" src="@ViewBag.osshost/js/ossjs/HomeIndex.js?20180606"></script>
 
 </body>
 @{Html.RenderAction("index", "PvUvIp");}
