--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Plan/Look.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Plan/Look.cshtml
@@ -716,7 +716,7 @@
                                         <td colspan="3">
 
 
-                                            <font class="Mif_red">@numArr[6] </font>
+                                            <font>@numArr[6] </font>
 
                                         </td>
 
