--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Record/OpenRecord.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Record/OpenRecord.cshtml
@@ -9,7 +9,9 @@
     int lType = ViewBag.lType;
     string currentDate = ViewBag.currentDate;
 
-    string desc = currentDate + "开奖记录";
+    string desc = ViewBag.lotteryTypeName + "开奖记录";
+
+    string title = ViewBag.lotteryTypeName + "开奖记录-彩票开奖查询-彩票开奖结果";
 
 
 }
@@ -19,7 +21,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=yes">
-    <title>开奖记录-开奖现场直播_六彩开奖直播_双色球开奖_福彩3D开奖_时时彩开奖_11X5开奖_赛车pk10_快三_快乐十分_全网开奖最快</title>
+    <title>@title</title>
     <link rel="stylesheet" type="text/css" href="@ViewBag.osshost/css/style.css" />
     <link href="@ViewBag.osshost/css/mescroll.min.css" rel="stylesheet" />
     <script type="text/javascript" src="@ViewBag.osshost/js/jquery-1.8.3.min.js"></script>
@@ -32,7 +34,7 @@
 <body style="background: #F4F4F5;">
     <header class="hjc_header">
         <a href="javascript:history.go(-1);" class="hjc_back"></a>
-        <a href="javascript:;" class="hjc_logo">开奖记录</a>
+        <a href="javascript:;" class="hjc_logo">@desc</a>
         @*<div class="demo">
             <input type="text" value="@currentDate" id="dateSelectorOne" placeholder="">
             <p id="dateSelectorOne" >@currentDate</p>
