--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Record/OpenRecord.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Record/OpenRecord.cshtml
@@ -22,6 +22,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=yes">
     <title>@title</title>
+    <meta name="keywords" content="@title">
+    <meta name="description" content="@title">
     <link rel="stylesheet" type="text/css" href="@ViewBag.osshost/css/style.css" />
     <link href="@ViewBag.osshost/css/mescroll.min.css" rel="stylesheet" />
     <script type="text/javascript" src="@ViewBag.osshost/js/jquery-1.8.3.min.js"></script>
